# HyperEngine

./: .gitignore  .gitmodules  CMakeLists.txt  Config.hpp.in
Engine/: CMakeLists.txt
Engine/common/: BaseDefine.h  Color.cpp  Color.h  Common.h  ConstExpr.hpp  ElapsedTime.hpp  LogManager.cpp  LogManager.h  NoCopyable.h  Node.cpp  Node.hpp  Node.inl  NodeConstView.hpp  NodeConstView.inl  NodeFormat.hpp  NodeView.cpp  NodeView.hpp  NodeView.inl  RefObject.h  StreamFactory.hpp  String.cpp  String.hpp  Time.hpp  TypeInfo.hpp  Utility.cpp  Utility.h
Engine/component/: Component.hpp
Engine/device/: Window.cpp  Window.h  Windows.cpp  Windows.h
Engine/engine/: App.h  Engine.cpp  Engine.h  Module.hpp
Engine/file/: BaseFStream.hpp  FBuffer.hpp  FStream.hpp  FileManager.cpp  FileManager.h  IFStream.hpp  OFStream.hpp
Engine/graphics/: Graphics.cpp  Graphics.h  VulObject.h
Engine/graphics/command/: CmdManager.cpp  CmdManager.h  CommandBuffer.cpp  CommandBuffer.h  CommandPool.cpp  CommandPool.h
Engine/graphics/device/: Instance.cpp  Instance.h  LogicDevice.cpp  LogicDevice.h  PhysicalDevice.cpp  PhysicalDevice.h  Queue.cpp  Queue.h  VulInstance.cpp  VulInstance.h  VulLogicDevice.cpp  VulLogicDevice.h  VulPhysicalDevice.cpp  VulPhysicalDevice.h
Engine/graphics/pipeline/: GraphicsPipeline.cpp  GraphicsPipeline.h  Pipeline.cpp  Pipeline.h  PipelineLayout.cpp  PipelineLayout.h  RenderPass.cpp  RenderPass.h  RenderStage.cpp  RenderStage.h  Renderer.h  Shader.cpp  Shader.h  SubRender.h  SubRenderHolder.cpp  SubRenderHolder.h
Engine/graphics/resource/: FrameBuffer.cpp  FrameBuffer.h  Image2D.cpp  Image2D.h  ResourceCache.cpp  ResourceCache.h
Engine/graphics/resource/buffer/: Buffer.cpp  Buffer.h  UniformBuffer.cpp  UniformBuffer.h  UniformHandler.cpp  UniformHandler.h
Engine/graphics/resource/descriptor/: Descriptor.h  DescriptorHandler.cpp  DescriptorHandler.h  DescriptorPool.cpp  DescriptorPool.h  DescriptorSet.cpp  DescriptorSet.h  DescriptorSetLayout.cpp  DescriptorSetLayout.h
Engine/graphics/resource/image/: Image.cpp  Image.h  Image2D.cpp  Image2D.h  ImageDepth.cpp  ImageDepth.h  Sampler.cpp  Sampler.h
Engine/graphics/surface/: PresentManager.cpp  PresentManager.h  Surface.cpp  Surface.h  SwapChain.cpp  SwapChain.h
Engine/graphics/sync/: Fence.cpp  Fence.h  Semaphore.cpp  Semaphore.h
Engine/model/: Model.cpp  Model.hpp  ModelFactory.hpp
Engine/resource/: Resource.h  ResourceManager.cpp  ResourceManager.hpp
Engine/resource/bitmap/: Bitmap.cpp  Bitmap.h  BitmapFactory.hpp
Engine/scene/: Entity.cpp  Entity.h
Resources/shaders/texture/: tex.frag  tex.vert
Resources/shaders/triangle/: tri1.vert
Test/: CMakeLists.txt
Test/model/: CMakeLists.txt  MainApp.cpp  main.cpp
Test/texture/: CMakeLists.txt  MainApp.cpp  MainRenderer.cpp  MainRenderer.h  main.cpp
Test/triangle/: CMakeLists.txt  MainApp.h  MainRenderer.cpp
include/: Engine.h
src/: main.cpp
src/engine/: Engine.cpp
